[package]
name = "statustracker"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argfile = "0.1"
base64 = "0.21"
clap = { version = "4.1", features = ["derive"] }
colored = "2.0.0"
csv = "1.2"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
